# Anima-Psionic-Cards

./: LICENSE  PsionicData.db  README.md  animapsioniccards.kv  buildozer.spec  pyproject.toml
.buildozer/: state.db
.buildozer/android/app/: main.py
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/AnimaPsionicCardsApp/: build.gradle  build.xml  dist_info.json  local.properties
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/AnimaPsionicCardsApp/src/main/assets/: private.tar
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/AnimaPsionicCardsApp/src/main/res/values/: strings.xml
